font shifting fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@ body {
   src: url("/fonts/NeueMontreal-Book.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
+  font-display: optional;
 }
 
 @font-face {
@@ -14,6 +15,7 @@ body {
   src: url("/fonts/NeueMontreal-Regular.woff2") format("woff2");
   font-weight: 450;
   font-style: normal;
+  font-display: optional;
 }
 
 @font-face {
@@ -21,6 +23,7 @@ body {
   src: url("/fonts/NeueMontreal-Medium.woff2") format("woff2");
   font-weight: 530;
   font-style: normal;
+  font-display: optional;
 }
 
 @font-face {
@@ -28,6 +31,7 @@ body {
   src: url("/fonts/NeueMontreal-Semibold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
+  font-display: optional;
 }
 
 @font-face {
@@ -35,6 +39,7 @@ body {
   src: url("/fonts/NeueMontreal-Bold.woff2") format("woff2");
   font-weight: 800;
   font-style: normal;
+  font-display: optional;
 }
 
 * {
